--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-567-nomad-force
                         Your browser does not support the video tag.
                     </video>
                 </div>
-
+                <div></div>
                 <div class="overlay"></div>
             </section>
 
